# oopmech

./: .gitignore  CONTRIBUTING.md  README.md
aquifer/: Aggregator.cpp  Aggregator.h  CMakeLists.txt  CalcData.cpp  CalcData.h  main.cpp  myHeaders.h
aquifer/Convection/: Convection.cpp  Convection.h  ConvectionP.cpp  ConvectionP.h  ConvectionPars.cpp  ConvectionPars.h  ConvectionS.cpp  ConvectionS.h
aquifer/Equation/: Equation.h  EquationP.h  EquationS.h
aquifer/Helper/: LinearEquation.h  MatrixOperations.h
aquifer/InOut/: data.txt  funcPars.txt  gridPars.txt  satIni.txt
aquifer/Location/: Location.cpp  Location.h  LocationP.cpp  LocationP.h  LocationS.cpp  LocationS.h
aquifer/Plot/: Plot.cpp  Plot.h  PlotInterface.cpp  PlotInterface.h  PlotPar.cpp  PlotPar.h  PlotPar1D.cpp  PlotPar1D.h  PlotPar2D.cpp  PlotPar2D.h
aquifer/States/: FuncPars.cpp  FuncPars.h  Grid.cpp  Grid.h
gridmaker/: CMakeLists.txt  main.cpp
gridmaker/inOut/: data.txt  gridPars.txt  satIni.txt
